Revert PreprocessingCte changes